# open-korean-automatic-speech-recognition

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  leaderboard.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  result_submission.md
.github/workflows/: ci.yml  pages.yml
doc/: README.md  aihub_pipeline_check.md  data_policy.md  external_links.md  leaderboard.md  leaderboard_data.json  leaderboard_update_workflow.md  metrics.md  normalization.md  repository_settings.md  result_submission.md  submitted_results.json
doc/data/: KsponSpeech.md
docker/: Dockerfile  attach.bat  build.bat  build.sh  run.bat  run.sh
openkoasr/: main.py  normalization.py  registry.py
openkoasr/configs/: __init__.py  config_parser.py
openkoasr/dataset/: __init__.py  aihub_telephone.py  manifest.py  mock.py  sample.py
openkoasr/evaluation/: __init__.py  error_analysis.py  results.py  runner.py  writer.py
openkoasr/metrics/: __init__.py  evaluator.py  (+7 more)
scripts/: aggregate_aihub_all.py  build_pages.py  extract_KsponSpeech_data.sh  generate_leaderboard.py  public_readiness_check.py  run.sh  run_full_evaluation_matrix.py  validate_leaderboard_data.py
site/: app.js  index.html  robots.txt  sitemap.xml  styles.css
tests/: test_aggregate_aihub_all.py  test_aihub_dataset.py  test_build_pages.py  test_evaluator.py  test_generate_leaderboard.py  test_normalization.py  test_run_full_evaluation_matrix.py  test_runner_and_writer.py  test_validate_leaderboard_data.py
(+19 files in other folders)
