[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openkoasr"
version = "0.1.0"
description = "Open-source Korean ASR evaluation and leaderboard tooling."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "jiwer",
  "librosa",
  "numpy",
  "torch==2.9.1",
  "torchvision",
  "torchaudio",
  "torchcodec",
  "soundfile",
  "tqdm",
  "transformers",
  "datasets",
  "accelerate",
  "kiwipiepy",
  "jamo",
  "calflops",
  "openai-whisper",
  "qwen-asr",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]
test = [
  "pytest>=8",
  "jamo>=0.4",
]

[tool.setuptools.packages.find]
include = ["openkoasr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
